--- a/zabbix-5.x/docker-compose.yml
+++ b/zabbix-5.x/docker-compose.yml
@@ -39,6 +39,7 @@ services:
   zabbix-server:
     container_name: zabbix-server
     image: zabbix/zabbix-server-mysql:ubuntu-5.0-latest
+    restart: always
     environment:
       - DB_SERVER_HOST=mysql
       - MYSQL_DATABASE=${MYSQL_DATABASE}
@@ -50,6 +51,7 @@ services:
   zabbix-web:
     container_name: zabbix-web
     image: zabbix/zabbix-web-nginx-mysql:alpine-5.0-latest
+    restart: always
     environment:
       - DB_SERVER_HOST=mysql
       - MYSQL_DATABASE=${MYSQL_DATABASE}
@@ -65,6 +67,7 @@ services:
   zabbix-agent:
     container_name: zabbix-agent
     image: zabbix/zabbix-agent:alpine-5.0-latest
+    restart: always
     environment:
       - ZBX_SERVER_HOST=zabbix-server 
       - ZBX_HOSTNAME=Zabbix server
